# ironic-oneview-cli

./: .coveragerc  .gitignore  .gitlab-ci.yml  .stestr.conf  .testr.conf  .travis.yml  CHANGELOG.md  README.md  README.rst  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
etc/ironic-oneview-cli/: ironic-oneview-cli.conf.sample
ironic_oneview_cli/: __init__.py  common.py  config.py  exceptions.py  facade.py  objects.py  oneview_client.py  oneview_uri.py  openstack_client.py  service_logging.py  shell.py  sync_exceptions.py
ironic_oneview_cli/audit_shell/: log_parser.py
ironic_oneview_cli/create_flavor_shell/: commands.py  objects.py  ov-flavor.sh  ov_flavor_shell.py  test_commands.py  test_objects.py
ironic_oneview_cli/create_node_shell/: commands.py
ironic_oneview_cli/create_node_shell/tests/: test_commands.py  test_ov_create_node.py
ironic_oneview_cli/create_port_shell/: commands.py
ironic_oneview_cli/delete_node_shell/: commands.py
ironic_oneview_cli/genconfig/: commands.py
ironic_oneview_cli/genrc/: commands.py
ironic_oneview_cli/migrate_node_shell/: commands.py
ironic_oneview_cli/openstack/common/: _i18n.py  cliutils.py
ironic_oneview_cli/tests/: .base.py.swp  base.py  ironic-oneview-cli-tests.conf  stubs.py  test_ironic_oneview_cli.py
ironic_oneview_cli/tests/functional/: test_functional_ironic_oneview_cli.py  test_ironic_oneview_cli.py  test_oneview_client.py  test_openstack_client.py
ironic_oneview_cli/tests/unit/: test_common.py  test_ironic_oneview_cli.py  test_unit_ironic_oneview_cli.py
