[metadata]
name = ironic-oneview-cli
summary = Command Line Interface to ease the use of OneView Driver for openstack/ironic
description-file = README.md
author = UFCG
author-email = ricardo@lsd.ufcg.edu.br
home-page = https://github.com/HewlettPackard/ironic-oneview-cli
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    ironic_oneview_cli
    
[entry_points]
console_scripts =
    ironic-oneview = ironic_oneview_cli.shell:main
